updates to navbar color and click quiz

--- a/app/clickHome/clickHome.html
+++ b/app/clickHome/clickHome.html
@@ -4,7 +4,7 @@
       <uib-slide ng-repeat="slide in slides" active="slide.active">
         <img ng-src="{{slide.image}}" style="margin:auto;height:800px">
         <div class="carousel-caption">
-          <h1><font color="black">{{slide.text}}</font></h1>
+          <h1><font color="yellow">{{slide.text}}</font></h1>
         </div>
       </uib-slide>
     </uib-carousel>
