--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,10 @@
   <meta name="description" content="">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
+
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
   <!--  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">-->
   <!--  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">-->
@@ -19,17 +20,11 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
 
-  <style>
-    .navbar {
-      border-radius: 0;
-    }
-  </style>
-
 </head>
 
 <body>
 
-  <div class="navbar navbar-inverse" role="navigation" ng-controller="HeaderCtrl">
+  <div class="navbar navbar-default" role="navigation" ng-controller="HeaderCtrl">
     <div class="navbar-header">
       <a class="navbar-brand" ui-sref="#">Click!</a>
     </div>
@@ -40,25 +35,15 @@
     </ul>
   </div>
 
-  <!--
-  <ul class="menu">
-    <li><a href="#/clickHome">Click</a></li>
-    <li><a href="#/clickQuiz">Click Quiz</a></li>
-    <li><a href="#/clickFacts">Click Facts</a></li>
-  </ul>
--->
-
   <div ng-view></div>
-
-  <!--  <div>Angular seed app: v<span app-version></span></div>-->
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-<!--  <script src="bower_components/angular/angular.js"></script>-->
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <!--  <script src="bower_components/angular/angular.js"></script>-->
+  <!--  <script src="bower_components/angular-route/angular-route.js"></script>-->
+  <!--  <script src="bower_components/angular-animate/angular-animate.js"></script>-->
+  <!--  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
   <script src="app.js"></script>
   <script src="clickHome/clickHome.js"></script>
   <script src="clickQuiz/clickQuiz.js"></script>
