--- a/app/clickQuiz/partial-quiz.html
+++ b/app/clickQuiz/partial-quiz.html
@@ -1,20 +1,20 @@
 <div class="quiz-area" ng-show="inProgress">
   <div ng-show="!quizOver">
     <h2 id="question">{{question}}</h2>
-    <ul id="options">
-      <li ng-repeat="option in options">
+    <ul id="options" ng-repeat="option in options">
+<!--      <li ng-repeat="option in options">-->
         <label>
-          <input type="button" class="btn btn-primary" name="answer" id="{{option}}" value="{{option}}" ng-model="$parent.quiz" data-ng-click="checkAnswer($event)">
+          <input type="button" class="btn btn-primary" name="answer" id="{{option}}" value="{{option}}" ng-model="$parent.quiz" data-ng-click="checkAnswer($event)" ng-disabled="!answerMode">
         </label>
-      </li>
+<!--      </li>-->
     </ul>
 
-    <button ng-click="checkAnswer()" class="btn btn-primary" ng-show="answerMode">Submit</button>
+<!--    <button ng-click="checkAnswer()" class="btn btn-primary" ng-show="answerMode">Submit</button>-->
 
     <div ng-show="!answerMode">
       <button ng-click="nextQuestion()" class="next-question btn btn-primary">Quiz on!</button>
       <span ng-show="correctAns">That is correct!</span>
-      <span ng-show="!correctAns">Sorry, wrong!</span>
+      <span ng-show="!correctAns">Sorry, wrong! The answer is {{options[correct]}}</span>
     </div>
 
   </div>
@@ -33,24 +33,3 @@
 <div id="score">
   Score: {{score}}
 </div>
-
-<!--
-  Who starred in the movie Click?
-  <br>
-  <div class="btn-group">
-    <label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Left'">Adam Sandler!</label>
-    <label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Middle'">Saddam Andler!</label>
-    <label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Right'">Adam Chandler!</label>
-  </div>
-
-  <br>
-  <br>
-  <button type="button" class="btn btn-primary">
-    Magic Remote!
-  </button>
-  <br>
-  <br>
-  <button type="button" class="btn btn-primary" popover-placement="right" popover-trigger="mouseenter" uib-popover="Was he in that movie?">
-    Christopher Walken(?)!
-  </button>
--->
