Add ability to read questions from JSON

--- a/app/clickQuiz/partial-quiz.html
+++ b/app/clickQuiz/partial-quiz.html
@@ -14,7 +14,7 @@
     <div ng-show="!answerMode">
       <button ng-click="nextQuestion()" class="next-question btn btn-primary">Quiz on!</button>
       <span ng-show="correctAns">That is correct!</span>
-      <span ng-show="!correctAns">Sorry, wrong! The answer is {{options[correct]}}</span>
+      <span ng-show="!correctAns">Sorry, wrong! The answer is "{{options[correct]}}".</span>
     </div>
 
   </div>
