remove refs to removed files

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-  <div class="navbar navbar-default" role="navigation" ng-controller="HeaderCtrl">
+  <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
       <a class="navbar-brand" ui-sref="#">Click!</a>
     </div>
