--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a class="navbar-brand" ui-sref="#">Click!</a>
     </div>
     <ul class="nav navbar-nav">
-      <li ng-class="{ active: isActive('#/clickHome')}"><a href="#/clickHome">Home</a></li>
+      <li ng-class="{ active: isActive('#/clickHome')}"><a href="#/clickHome">LiveHome</a></li>
       <li ng-class="{ active: isActive('#/clickQuiz')}"><a href="#/clickQuiz">Click Quiz</a></li>
       <li ng-class="{ active: isActive('#/clickFacts')}"><a href="#/clickFacts">Click Facts</a></li>
     </ul>
