--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,6 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!--
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
--->
   <!-- Angular Material requires Angular.js Libraries -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
@@ -24,19 +19,18 @@
   <!-- Angular Material Library -->
   <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc5/angular-material.min.js"></script>
 
-  <!--
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+  <!-- TODO: Angular Grid for clickHome to make a responsive image grid -->
+  <!--  <script src="assets/angulargrid.js"></script>-->
+
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  <!--  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc5/angular-material.min.css">
-  <!--  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
   <link rel="stylesheet" href="app.css">
-  <!--  <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>-->
 
 </head>
 
 <body ng-app="clickApp" layout="row" ng-cloak>
 
+  <!--
   <md-sidenav layout="column" class="md-sidenav-left" md-is-locked-open='true'>
     <md-toolbar>
       <md-button class="md-primary" ng-href="#/clickHome">
@@ -49,24 +43,37 @@
       <md-button class="navBtn" ng-href="#/clickFacts">Facts</md-button>
     </section>
   </md-sidenav>
+-->
 
+  <!--  Arrange everything underneath the navbar -->
   <div layout="column" layout-fill>
     <md-toolbar>
-    <div class="md-toolbar-tools">
-      <span flex></span>
-      <span>This Movie is Click!</span>      
+      <div class="md-toolbar-tools" layout-fill>
+        This Movie is Click!
+        <span flex></span>
 <!--
-      <md-button>
-        Right Bar Button
-      </md-button>
+        <md-button>
+          Right Bar Button
+        </md-button>
 -->
-    </div>  
+      </div>
     </md-toolbar>
-    <ng-view>
-    View Content
-  </ng-view>
+
+    <!-- Arrange the sidenav and content side-by-side -->
+    <div layout="row" layout-fill>
+      <md-sidenav layout="column" class="md-sidenav-left" md-is-locked-open='true' layout-fill>
+        <section flex layout="column" layout-align="center">
+          <md-button class="navBtn" ng-href="#/clickHome">Home</md-button>
+          <md-button class="navBtn" ng-href="#/clickQuiz">Quiz</md-button>
+          <md-button class="navBtn" ng-href="#/clickFacts">Facts</md-button>
+        </section>
+      </md-sidenav>
+      <ng-view>
+        View Content
+      </ng-view>
+    </div>
   </div>
-  
+
   <script src="app.js"></script>
   <script src="clickHome/clickHome.js"></script>
   <script src="clickQuiz/clickQuiz.js"></script>
