--- a/clickHome/clickHome.html
+++ b/clickHome/clickHome.html
@@ -1,3 +1,4 @@
+<!--
 <div ng-controller="ClickHomeCtrl" id="click_home">
   <div style="height: 500">
     <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
@@ -9,4 +10,25 @@
       </uib-slide>
     </uib-carousel>
   </div>
+</div>
+-->
+
+<div ng-controller="ClickHomeCtrl" id="click_home" flex ng-cloak>
+  <div ng-repeat="row in grid" flex layout="row">
+    <div ng-repeat="item in row" flex layout="row">
+
+        <img ng-src="assets/click{{item}}.jpg" height="400" width="400"/>
+
+    </div>
+  </div>
+
+  <!-- <md-grid-list
+        md-cols-sm="1" md-cols-md="2" md-cols-gt-md="6"
+        md-row-height-gt-md="1:1" md-row-height="4:3"
+        md-gutter="8px" md-gutter-gt-sm="4px" >
+    <md-grid-tile ng-repeat="slide in slides">
+      <md-icon md-svg-icon="{{tile.icon}}"></md-icon>
+      <md-grid-tile-footer><h3>{{tile.title}}</h3></md-grid-tile-footer>
+    </md-grid-tile>
+  </md-grid-list> -->
 </div>
