--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,10 @@
   <!-- Angular Material Library -->
   <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc5/angular-material.min.js"></script>
 
+  <!--  Hamburger toggle -->
+  <script src="bower_components/angular-hamburger-toggle/dist/angular-hamburger-toggle.min.js"></script>
+  <link rel="stylesheet" href="bower_components/angular-hamburger-toggle/dist/angular-hamburger-toggle.min.css">
+
   <!-- TODO: Angular Grid for clickHome to make a responsive image grid -->
   <!--  <script src="assets/angulargrid.js"></script>-->
 
@@ -28,7 +32,7 @@
 
 </head>
 
-<body ng-app="clickApp" layout="row" ng-cloak>
+<body ng-controller="AppCtrl" ng-app="clickApp" layout="row" ng-cloak>
 
   <!--
   <md-sidenav layout="column" class="md-sidenav-left" md-is-locked-open='true'>
@@ -48,21 +52,18 @@
   <!--  Arrange everything underneath the navbar -->
   <div layout="column" layout-fill>
     <md-toolbar>
-      <div class="md-toolbar-tools" layout-fill>
+      <div class="md-toolbar-tools" layout="row">
+        <hamburger-toggle state="tgState" ng-click="toggleLeft()" class="hamburger-toggle" hide-gt-md></hamburger-toggle>
         This Movie is Click!
-        <span flex></span>
-<!--
-        <md-button>
-          Right Bar Button
-        </md-button>
--->
+<!--        <span flex></span>-->
       </div>
     </md-toolbar>
 
     <!-- Arrange the sidenav and content side-by-side -->
     <div layout="row" layout-fill>
-      <md-sidenav layout="column" class="md-sidenav-left" md-is-locked-open='true' layout-fill>
+      <md-sidenav layout="column" class="md-sidenav-left" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" layout-fill>
         <section flex layout="column" layout-align="center">
+          <hamburger-toggle state="tgState" ng-click="toggleLeft()" class="hamburger-toggle" hide-gt-md></hamburger-toggle>
           <md-button class="navBtn" ng-href="#/clickHome">Home</md-button>
           <md-button class="navBtn" ng-href="#/clickQuiz">Quiz</md-button>
           <md-button class="navBtn" ng-href="#/clickFacts">Facts</md-button>
