--- a/app/clickHome/clickHome.html
+++ b/app/clickHome/clickHome.html
@@ -1,34 +1,9 @@
-<!--
-<div ng-controller="ClickHomeCtrl" id="click_home">
-  <div style="height: 500">
-    <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
-      <uib-slide ng-repeat="slide in slides" active="slide.active">
-        <img ng-src="{{slide.image}}" style="margin:auto;height:800px">
-        <div class="carousel-caption">
-          <h1><font color="yellow">{{slide.text}}</font></h1>
-        </div>
-      </uib-slide>
-    </uib-carousel>
-  </div>
-</div>
--->
+<!--TODO: Change this to infinite scrolling-->
 
 <div ng-controller="ClickHomeCtrl" id="click_home" flex ng-cloak>
-  <div ng-repeat="row in grid" flex layout="row">
-    <div ng-repeat="item in row" flex layout="row">
-
-        <img ng-src="assets/click{{item}}.jpg" height="400" width="400"/>
-
+  <div ng-repeat="row in grid" layout="row" >
+    <div ng-repeat="item in row" flex="auto">
+      <img ng-src="assets/click{{item}}.jpg" height="400" width="400" flex="auto" />
     </div>
   </div>
-
-  <!-- <md-grid-list
-        md-cols-sm="1" md-cols-md="2" md-cols-gt-md="6"
-        md-row-height-gt-md="1:1" md-row-height="4:3"
-        md-gutter="8px" md-gutter-gt-sm="4px" >
-    <md-grid-tile ng-repeat="slide in slides">
-      <md-icon md-svg-icon="{{tile.icon}}"></md-icon>
-      <md-grid-tile-footer><h3>{{tile.title}}</h3></md-grid-tile-footer>
-    </md-grid-tile>
-  </md-grid-list> -->
 </div>
