--- a/clickQuiz/partial-quiz.html
+++ b/clickQuiz/partial-quiz.html
@@ -2,27 +2,27 @@
   <div ng-show="!quizOver">
     <h2 id="question">{{question}}</h2>
     <ul id="options" ng-repeat="option in options">
-      <md-button class="md-primary md-raised" name="answer" id="{{option}}" value="{{option}}" ng-model="$parent.quiz" ng-click="checkAnswer(option)" ng-disabled="!answerMode" flex>{{option}}</md-button>
+      <md-button class="quizBtn" name="answer" id="{{option}}" value="{{option}}" ng-model="$parent.quiz" ng-click="checkAnswer(option)" ng-disabled="!answerMode" flex>{{option}}</md-button>
     </ul>
 
     <div ng-show="!answerMode">
       <span ng-show="correctAns">That is correct!</span>
       <span ng-show="!correctAns">Sorry, wrong! The answer is "{{options[correct]}}".</span>
       <br/>
-      <md-button class="md-raised md-primary" ng-click="nextQuestion()" class="next-question btn btn-primary">Quiz on!</button>
+      <md-button class="quizBtn" ng-click="nextQuestion()" class="next-question btn btn-primary">Quiz on!</button>
     </div>
 
   </div>
 
   <div ng-show="quizOver">
     <h2>Quiz over!</h2>
-    <md-button class="md-raised md-primary" ng-click="reset()">Click the rewind button on the magic remote that Adam Sandler has in the movie Click to play again!</button>
+    <md-button class="quizBtn" ng-click="reset()">Click the rewind button on the magic remote that Adam Sandler has in the movie Click to play again!</button>
   </div>
 </div>
 
 <div class="intro" ng-show="!inProgress">
   <p>Click!</p>
-  <md-button id="startQuiz" class="md-raised md-primary" ng-click="start()">Click 'Play' on the magic remote that Adam Sandler has in the movie Click to start the quiz!</button>
+  <md-button id="startQuiz" class="quizBtn" ng-click="start()">Click 'Play' on the magic remote that Adam Sandler has in the movie Click to start the quiz!</button>
 </div>
 
 <div id="score" ng-show="inProgress || quizOver">
