--- a/app/index.html
+++ b/app/index.html
@@ -56,13 +56,15 @@
           <span flex></span>This Movie is Click!
         </div>
       </md-toolbar>
-      <section id="content" role="content" layout="column" layout-padding md-scroll-y>
+
+      <section id="content" role="content" layout="column" layout-padding>
         <md-content class="md-whiteframe-z2" ng-cloak>
           <ng-view>
             View Content
           </ng-view>
         </md-content>
       </section>
+
     </section>
   </div>
   </div>
