Clean up for future mining, update quiz page

--- a/app/clickQuiz/clickQuiz.html
+++ b/app/clickQuiz/clickQuiz.html
@@ -1,4 +1,7 @@
-  <div class="container">
-    <h1 class="title">Click Quiz, hotshot!</h1>
-    <quiz/>
+<div class="container-fluid" layout="row" ng-cloak flex>
+  <div flex="50" quiz></div>
+  <span flex></span>
+  <div hide show-gt-sm>
+    <img src="../assets/click8.jpg" />
   </div>
+</div>
