--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,7 @@
   <!--  Material Icons -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
 
-  <!-- TODO: Angular Grid for clickHome to make a responsive image grid -->
-  <!--  <script src="assets/angulargrid.js"></script>-->
-
-  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="app.css">
 </head>
 
@@ -68,7 +65,7 @@
 
     </section>
   </div>
-  
+
   <script src="app.js"></script>
   <script src="clickHome/clickHome.js"></script>
   <script src="clickQuiz/clickQuiz.js"></script>
